--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
     "json-server": "^0.17.4",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
